code/Parser Analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSANT
    BOOLEAN
    CHAR
    COMMENTBLOCK
    COMMENTLINE
    COMPARATION
    COS
    DISTINT
    EXP
    FALSE
    HASHTAG
    INPUT
    LABEL
    LBLOCK
    LN
    OUTPUT
    POT
    QUOT
    RBLOCK
    SIN
    SQR
    SQRT
    TRUE
    TYPE
    USES

Grammar

Rule 0     S' -> pascal-program
Rule 1     pascal-program -> PROGRAM ID program-heading SEMICOLON block DOT
Rule 2     pascal-program -> PROGRAM ID SEMICOLON block DOT
Rule 3     program-heading -> LPAREN identifier-list RPAREN
Rule 4     identifier-list -> ID
Rule 5     identifier-list -> identifier-list COMMA ID
Rule 6     block -> block1
Rule 7     block -> label-declaration SEMICOLON block1
Rule 8     block1 -> block2
Rule 9     block1 -> constant-declaration SEMICOLON block2
Rule 10    block2 -> block3
Rule 11    block2 -> type-declaration SEMICOLON block3
Rule 12    block3 -> block4
Rule 13    block3 -> variable-declaration SEMICOLON block4
Rule 14    block4 -> block5
Rule 15    block4 -> proc-and-func-declaration SEMICOLON block5
Rule 16    block5 -> BEGIN statement-list END
Rule 17    label-declaration -> label INTEGER
Rule 18    label-declaration -> label-declaration COMMA INTEGER
Rule 19    constant-declaration -> CONST ID EQUAL constant
Rule 20    constant-declaration -> constant-declaration SEMICOLON ID EQUAL constant
Rule 21    type-declaration -> type ID EQUAL type
Rule 22    type-declaration -> type-declaration SEMICOLON ID EQUAL type
Rule 23    variable-declaration -> VAR variableid-list COLON type
Rule 24    variable-declaration -> variable-declaration SEMICOLON variableid-list COLON type
Rule 25    variableid-list -> ID
Rule 26    variableid-list -> variableid-list COMMA ID
Rule 27    constant -> INTEGER
Rule 28    constant -> NUMBER
Rule 29    constant -> REAL
Rule 30    constant -> STRING
Rule 31    constant -> constid
Rule 32    constant -> PLUS constid
Rule 33    type -> simple-type
Rule 34    type -> structured-type
Rule 35    type -> typeid
Rule 36    simple-type -> LPAREN identifier-list RPAREN
Rule 37    simple-type -> constant
Rule 38    simple-type -> typeid
Rule 39    structured-type -> ARRAY LBRACKET index-list RBRACKET OF type
Rule 40    structured-type -> RECORD field-list END
Rule 41    structured-type -> SET OF simple-type
Rule 42    structured-type -> FILE OF type
Rule 43    structured-type -> PACKED structured-type
Rule 44    index-list -> simple-type
Rule 45    index-list -> index-list COMMA simple-type
Rule 46    field-list -> fixed-part
Rule 47    field-list -> fixed-part SEMICOLON variant-part
Rule 48    field-list -> variant-part
Rule 49    fixed-part -> record-field
Rule 50    fixed-part -> fixed-part SEMICOLON record-field
Rule 51    record-field -> empty
Rule 52    record-field -> fieldid-list COLON type
Rule 53    fieldid-list -> ID
Rule 54    fieldid-list -> fieldid-list COMMA ID
Rule 55    variant-part -> CASE tag-field OF variant-list
Rule 56    tag-field -> typeid
Rule 57    tag-field -> ID COLON typeid
Rule 58    variant-list -> variant
Rule 59    variant-list -> variant-list SEMICOLON variant
Rule 60    variant -> empty
Rule 61    variant -> case-label-list COLON LPAREN field-list RPAREN
Rule 62    case-label-list -> constant
Rule 63    case-label-list -> case-label-list COMMA constant
Rule 64    proc-and-func-declaration -> proc-or-func
Rule 65    proc-and-func-declaration -> proc-and-func-declaration SEMICOLON proc-or-func
Rule 66    proc-or-func -> PROCEDURE ID parameters SEMICOLON block-or-forward
Rule 67    proc-or-func -> FUNCTION ID parameters COLON typeid SEMICOLON block-or-forward
Rule 68    block-or-forward -> block
Rule 69    block-or-forward -> FORWARD
Rule 70    parameters -> LPAREN formal-parameter-list RPAREN
Rule 71    formal-parameter-list -> formal-parameter-section
Rule 72    formal-parameter-list -> formal-parameter-list SEMICOLON formal-parameter-section
Rule 73    formal-parameter-section -> parameterid-list COLON typeid
Rule 74    formal-parameter-section -> VAR parameterid-list COLON typeid
Rule 75    formal-parameter-section -> PROCEDURE ID parameters
Rule 76    formal-parameter-section -> FUNCTION ID parameters COLON typeid
Rule 77    parameterid-list -> ID
Rule 78    parameterid-list -> parameterid-list COMMA ID
Rule 79    statement-list -> statement
Rule 80    statement-list -> statement-list SEMICOLON statement
Rule 81    statement -> empty
Rule 82    statement -> variable EQUAL expression
Rule 83    statement -> BEGIN statement-list END statement
Rule 84    statement -> IF expression THEN statement
Rule 85    statement -> IF expression THEN statement ELSE statement
Rule 86    statement -> CASE expression OF case-list END
Rule 87    statement -> WHILE expression DO statement
Rule 88    statement -> REPEAT statement-list UNTIL expression
Rule 89    statement -> FOR varid EQUAL for-list DO statement
Rule 90    statement -> procid
Rule 91    statement -> procid LPAREN expression-list RPAREN
Rule 92    statement -> GOTO label
Rule 93    statement -> WITH record-variable-list DO statement
Rule 94    statement -> label COLON statement
Rule 95    statement -> WRITE LPAREN STRING RPAREN
Rule 96    statement -> READ LPAREN ID RPAREN
Rule 97    variable -> ID
Rule 98    variable -> variable LBRACKET subscript-list RBRACKET
Rule 99    variable -> variable COMMA fieldid
Rule 100   variable -> variable
Rule 101   subscript-list -> expression
Rule 102   subscript-list -> subscript-list COMMA expression
Rule 103   case-list -> case-label-list COLON statement
Rule 104   case-list -> case-list SEMICOLON case-label-list COLON statement
Rule 105   for-list -> expression TO expression
Rule 106   for-list -> expression DOWNTO expression
Rule 107   expression-list -> expression
Rule 108   expression-list -> expression-list COMMA expression
Rule 109   label -> INTEGER
Rule 110   record-variable-list -> variable
Rule 111   record-variable-list -> record-variable-list COMMA variable
Rule 112   expression -> expression relational-op additive-expression
Rule 113   expression -> additive-expression
Rule 114   relational-op -> LESS
Rule 115   relational-op -> LESSEQUAL
Rule 116   relational-op -> EQUAL
Rule 117   relational-op -> DEQUAL
Rule 118   relational-op -> GREATEREQUAL
Rule 119   relational-op -> GREATER
Rule 120   additive-expression -> additive-expression additive-op multiplicative-expression
Rule 121   additive-expression -> multiplicative-expression
Rule 122   additive-op -> PLUS
Rule 123   additive-op -> MINUS
Rule 124   additive-op -> OR
Rule 125   multiplicative-expression -> multiplicative-expression multiplicative-op unary-expression
Rule 126   multiplicative-expression -> unary-expression
Rule 127   multiplicative-op -> TIMES
Rule 128   multiplicative-op -> DIVIDE
Rule 129   multiplicative-op -> DIV
Rule 130   multiplicative-op -> MOD
Rule 131   multiplicative-op -> AND
Rule 132   unary-expression -> unary-op unary-expression
Rule 133   unary-expression -> primary-expression
Rule 134   unary-op -> PLUS
Rule 135   unary-op -> MINUS
Rule 136   unary-op -> NOT
Rule 137   primary-expression -> ID
Rule 138   primary-expression -> NUMBER
Rule 139   primary-expression -> INTEGER
Rule 140   primary-expression -> REAL
Rule 141   primary-expression -> STRING
Rule 142   primary-expression -> NIL
Rule 143   primary-expression -> funcid LPAREN expression-list RPAREN
Rule 144   primary-expression -> LBRACKET element-list RBRACKET
Rule 145   primary-expression -> LPAREN expression RPAREN
Rule 146   element-list -> empty
Rule 147   element-list -> element
Rule 148   element-list -> element-list COMMA element
Rule 149   element -> expression
Rule 150   element -> expression DOT DOT DOT expression
Rule 151   constid -> ID
Rule 152   typeid -> ID
Rule 153   funcid -> ID
Rule 154   procid -> ID
Rule 155   fieldid -> ID
Rule 156   varid -> ID
Rule 157   empty -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 
AND                  : 131
ARRAY                : 39
BEGIN                : 16 83
BOOLEAN              : 
CASE                 : 55 86
CHAR                 : 
COLON                : 23 24 52 57 61 67 73 74 76 94 103 104
COMMA                : 5 18 26 45 54 63 78 99 102 108 111 148
COMMENTBLOCK         : 
COMMENTLINE          : 
COMPARATION          : 
CONST                : 19
COS                  : 
DEQUAL               : 117
DISTINT              : 
DIV                  : 129
DIVIDE               : 128
DO                   : 87 89 93
DOT                  : 1 2 150 150 150
DOWNTO               : 106
ELSE                 : 85
END                  : 16 40 83 86
EQUAL                : 19 20 21 22 82 89 116
EXP                  : 
FALSE                : 
FILE                 : 42
FOR                  : 89
FORWARD              : 69
FUNCTION             : 67 76
GOTO                 : 92
GREATER              : 119
GREATEREQUAL         : 118
HASHTAG              : 
ID                   : 1 2 4 5 19 20 21 22 25 26 53 54 57 66 67 75 76 77 78 96 97 137 151 152 153 154 155 156
IF                   : 84 85
INPUT                : 
INTEGER              : 17 18 27 109 139
LABEL                : 
LBLOCK               : 
LBRACKET             : 39 98 144
LESS                 : 114
LESSEQUAL            : 115
LN                   : 
LPAREN               : 3 36 61 70 91 95 96 143 145
MINUS                : 123 135
MOD                  : 130
NIL                  : 142
NOT                  : 136
NUMBER               : 28 138
OF                   : 39 41 42 55 86
OR                   : 124
OUTPUT               : 
PACKED               : 43
PLUS                 : 32 122 134
POT                  : 
PROCEDURE            : 66 75
PROGRAM              : 1 2
QUOT                 : 
RBLOCK               : 
RBRACKET             : 39 98 144
READ                 : 96
REAL                 : 29 140
RECORD               : 40
REPEAT               : 88
RPAREN               : 3 36 61 70 91 95 96 143 145
SEMICOLON            : 1 2 7 9 11 13 15 20 22 24 47 50 59 65 66 67 72 80 104
SET                  : 41
SIN                  : 
SQR                  : 
SQRT                 : 
STRING               : 30 95 141
THEN                 : 84 85
TIMES                : 127
TO                   : 105
TRUE                 : 
TYPE                 : 
UNTIL                : 88
USES                 : 
VAR                  : 23 74
WHILE                : 87
WITH                 : 93
WRITE                : 95
error                : 

Nonterminals, with rules where they appear

additive-expression  : 112 113 120
additive-op          : 120
block                : 1 2 68
block-or-forward     : 66 67
block1               : 6 7
block2               : 8 9
block3               : 10 11
block4               : 12 13
block5               : 14 15
case-label-list      : 61 63 103 104
case-list            : 86 104
constant             : 19 20 37 62 63
constant-declaration : 9 20
constid              : 31 32
element              : 147 148
element-list         : 144 148
empty                : 51 60 81 146
expression           : 82 84 85 86 87 88 101 102 105 105 106 106 107 108 112 145 149 150 150
expression-list      : 91 108 143
field-list           : 40 61
fieldid              : 99
fieldid-list         : 52 54
fixed-part           : 46 47 50
for-list             : 89
formal-parameter-list : 70 72
formal-parameter-section : 71 72
funcid               : 143
identifier-list      : 3 5 36
index-list           : 39 45
label                : 17 92 94
label-declaration    : 7 18
multiplicative-expression : 120 121 125
multiplicative-op    : 125
parameterid-list     : 73 74 78
parameters           : 66 67 75 76
pascal-program       : 0
primary-expression   : 133
proc-and-func-declaration : 15 65
proc-or-func         : 64 65
procid               : 90 91
program-heading      : 1
record-field         : 49 50
record-variable-list : 93 111
relational-op        : 112
simple-type          : 33 41 44 45
statement            : 79 80 83 84 85 85 87 89 93 94 103 104
statement-list       : 16 80 83 88
structured-type      : 34 43
subscript-list       : 98 102
tag-field            : 55
type                 : 21 21 22 23 24 39 42 52
type-declaration     : 11 22
typeid               : 35 38 56 57 67 73 74 76
unary-expression     : 125 126 132
unary-op             : 132
variable             : 82 98 99 100 110 111
variable-declaration : 13 24
variableid-list      : 23 24 26
variant              : 58 59
variant-list         : 55 59
variant-part         : 47 48
varid                : 89

Parsing method: LALR

state 0

    (0) S' -> . pascal-program
    (1) pascal-program -> . PROGRAM ID program-heading SEMICOLON block DOT
    (2) pascal-program -> . PROGRAM ID SEMICOLON block DOT

    PROGRAM         shift and go to state 2

    pascal-program                 shift and go to state 1

state 1

    (0) S' -> pascal-program .



state 2

    (1) pascal-program -> PROGRAM . ID program-heading SEMICOLON block DOT
    (2) pascal-program -> PROGRAM . ID SEMICOLON block DOT

    ID              shift and go to state 3


state 3

    (1) pascal-program -> PROGRAM ID . program-heading SEMICOLON block DOT
    (2) pascal-program -> PROGRAM ID . SEMICOLON block DOT
    (3) program-heading -> . LPAREN identifier-list RPAREN

    SEMICOLON       shift and go to state 5
    LPAREN          shift and go to state 6

    program-heading                shift and go to state 4

state 4

    (1) pascal-program -> PROGRAM ID program-heading . SEMICOLON block DOT

    SEMICOLON       shift and go to state 7


state 5

    (2) pascal-program -> PROGRAM ID SEMICOLON . block DOT
    (6) block -> . block1
    (7) block -> . label-declaration SEMICOLON block1
    (8) block1 -> . block2
    (9) block1 -> . constant-declaration SEMICOLON block2
    (17) label-declaration -> . label INTEGER
    (18) label-declaration -> . label-declaration COMMA INTEGER
    (10) block2 -> . block3
    (11) block2 -> . type-declaration SEMICOLON block3
    (19) constant-declaration -> . CONST ID EQUAL constant
    (20) constant-declaration -> . constant-declaration SEMICOLON ID EQUAL constant
    (109) label -> . INTEGER
    (12) block3 -> . block4
    (13) block3 -> . variable-declaration SEMICOLON block4
    (21) type-declaration -> . type ID EQUAL type
    (22) type-declaration -> . type-declaration SEMICOLON ID EQUAL type
    (14) block4 -> . block5
    (15) block4 -> . proc-and-func-declaration SEMICOLON block5
    (23) variable-declaration -> . VAR variableid-list COLON type
    (24) variable-declaration -> . variable-declaration SEMICOLON variableid-list COLON type
    (33) type -> . simple-type
    (34) type -> . structured-type
    (35) type -> . typeid
    (16) block5 -> . BEGIN statement-list END
    (64) proc-and-func-declaration -> . proc-or-func
    (65) proc-and-func-declaration -> . proc-and-func-declaration SEMICOLON proc-or-func
    (36) simple-type -> . LPAREN identifier-list RPAREN
    (37) simple-type -> . constant
    (38) simple-type -> . typeid
    (39) structured-type -> . ARRAY LBRACKET index-list RBRACKET OF type
    (40) structured-type -> . RECORD field-list END
    (41) structured-type -> . SET OF simple-type
    (42) structured-type -> . FILE OF type
    (43) structured-type -> . PACKED structured-type
    (152) typeid -> . ID
    (66) proc-or-func -> . PROCEDURE ID parameters SEMICOLON block-or-forward
    (67) proc-or-func -> . FUNCTION ID parameters COLON typeid SEMICOLON block-or-forward
    (27) constant -> . INTEGER
    (28) constant -> . NUMBER
    (29) constant -> . REAL
    (30) constant -> . STRING
    (31) constant -> . constid
    (32) constant -> . PLUS constid
    (151) constid -> . ID

    CONST           shift and go to state 18
    INTEGER         shift and go to state 15
    VAR             shift and go to state 25
    BEGIN           shift and go to state 29
    LPAREN          shift and go to state 31
    ARRAY           shift and go to state 32
    RECORD          shift and go to state 33
    SET             shift and go to state 34
    FILE            shift and go to state 35
    PACKED          shift and go to state 36
    ID              shift and go to state 8
    PROCEDURE       shift and go to state 37
    FUNCTION        shift and go to state 38
    NUMBER          shift and go to state 39
    REAL            shift and go to state 40
    STRING          shift and go to state 41
    PLUS            shift and go to state 43

    block                          shift and go to state 9
    block1                         shift and go to state 10
    label-declaration              shift and go to state 11
    block2                         shift and go to state 12
    constant-declaration           shift and go to state 13
    label                          shift and go to state 14
    block3                         shift and go to state 16
    type-declaration               shift and go to state 17
    constant                       shift and go to state 19
    block4                         shift and go to state 20
    variable-declaration           shift and go to state 21
    type                           shift and go to state 22
    block5                         shift and go to state 23
    proc-and-func-declaration      shift and go to state 24
    simple-type                    shift and go to state 26
    structured-type                shift and go to state 27
    typeid                         shift and go to state 28
    proc-or-func                   shift and go to state 30
    constid                        shift and go to state 42

state 6

    (3) program-heading -> LPAREN . identifier-list RPAREN
    (4) identifier-list -> . ID
    (5) identifier-list -> . identifier-list COMMA ID

    ID              shift and go to state 45

    identifier-list                shift and go to state 44

state 7

    (1) pascal-program -> PROGRAM ID program-heading SEMICOLON . block DOT
    (6) block -> . block1
    (7) block -> . label-declaration SEMICOLON block1
    (8) block1 -> . block2
    (9) block1 -> . constant-declaration SEMICOLON block2
    (17) label-declaration -> . label INTEGER
    (18) label-declaration -> . label-declaration COMMA INTEGER
    (10) block2 -> . block3
    (11) block2 -> . type-declaration SEMICOLON block3
    (19) constant-declaration -> . CONST ID EQUAL constant
    (20) constant-declaration -> . constant-declaration SEMICOLON ID EQUAL constant
    (109) label -> . INTEGER
    (12) block3 -> . block4
    (13) block3 -> . variable-declaration SEMICOLON block4
    (21) type-declaration -> . type ID EQUAL type
    (22) type-declaration -> . type-declaration SEMICOLON ID EQUAL type
    (14) block4 -> . block5
    (15) block4 -> . proc-and-func-declaration SEMICOLON block5
    (23) variable-declaration -> . VAR variableid-list COLON type
    (24) variable-declaration -> . variable-declaration SEMICOLON variableid-list COLON type
    (33) type -> . simple-type
    (34) type -> . structured-type
    (35) type -> . typeid
    (16) block5 -> . BEGIN statement-list END
    (64) proc-and-func-declaration -> . proc-or-func
    (65) proc-and-func-declaration -> . proc-and-func-declaration SEMICOLON proc-or-func
    (36) simple-type -> . LPAREN identifier-list RPAREN
    (37) simple-type -> . constant
    (38) simple-type -> . typeid
    (39) structured-type -> . ARRAY LBRACKET index-list RBRACKET OF type
    (40) structured-type -> . RECORD field-list END
    (41) structured-type -> . SET OF simple-type
    (42) structured-type -> . FILE OF type
    (43) structured-type -> . PACKED structured-type
    (152) typeid -> . ID
    (66) proc-or-func -> . PROCEDURE ID parameters SEMICOLON block-or-forward
    (67) proc-or-func -> . FUNCTION ID parameters COLON typeid SEMICOLON block-or-forward
    (27) constant -> . INTEGER
    (28) constant -> . NUMBER
    (29) constant -> . REAL
    (30) constant -> . STRING
    (31) constant -> . constid
    (32) constant -> . PLUS constid
    (151) constid -> . ID

    CONST           shift and go to state 18
    INTEGER         shift and go to state 15
    VAR             shift and go to state 25
    BEGIN           shift and go to state 29
    LPAREN          shift and go to state 31
    ARRAY           shift and go to state 32
    RECORD          shift and go to state 33
    SET             shift and go to state 34
    FILE            shift and go to state 35
    PACKED          shift and go to state 36
    ID              shift and go to state 8
    PROCEDURE       shift and go to state 37
    FUNCTION        shift and go to state 38
    NUMBER          shift and go to state 39
    REAL            shift and go to state 40
    STRING          shift and go to state 41
    PLUS            shift and go to state 43

    block                          shift and go to state 46
    block1                         shift and go to state 10
    label-declaration              shift and go to state 11
    block2                         shift and go to state 12
    constant-declaration           shift and go to state 13
    label                          shift and go to state 14
    block3                         shift and go to state 16
    type-declaration               shift and go to state 17
    constant                       shift and go to state 19
    block4                         shift and go to state 20
    variable-declaration           shift and go to state 21
    type                           shift and go to state 22
    block5                         shift and go to state 23
    proc-and-func-declaration      shift and go to state 24
    simple-type                    shift and go to state 26
    structured-type                shift and go to state 27
    typeid                         shift and go to state 28
    proc-or-func                   shift and go to state 30
    constid                        shift and go to state 42

state 8

    (152) typeid -> ID .
    (151) constid -> ID .

  ! reduce/reduce conflict for ID resolved using rule 151 (constid -> ID .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 151 (constid -> ID .)
  ! reduce/reduce conflict for COMMA resolved using rule 151 (constid -> ID .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 151 (constid -> ID .)
  ! reduce/reduce conflict for END resolved using rule 151 (constid -> ID .)
  ! reduce/reduce conflict for RPAREN resolved using rule 151 (constid -> ID .)
    ID              reduce using rule 151 (constid -> ID .)
    RBRACKET        reduce using rule 151 (constid -> ID .)
    COMMA           reduce using rule 151 (constid -> ID .)
    SEMICOLON       reduce using rule 151 (constid -> ID .)
    END             reduce using rule 151 (constid -> ID .)
    RPAREN          reduce using rule 151 (constid -> ID .)

  ! ID              [ reduce using rule 152 (typeid -> ID .) ]
  ! RBRACKET        [ reduce using rule 152 (typeid -> ID .) ]
  ! COMMA           [ reduce using rule 152 (typeid -> ID .) ]
  ! SEMICOLON       [ reduce using rule 152 (typeid -> ID .) ]
  ! END             [ reduce using rule 152 (typeid -> ID .) ]
  ! RPAREN          [ reduce using rule 152 (typeid -> ID .) ]


state 9

    (2) pascal-program -> PROGRAM ID SEMICOLON block . DOT

    DOT             shift and go to state 47


state 10

    (6) block -> block1 .

    DOT             reduce using rule 6 (block -> block1 .)
    SEMICOLON       reduce using rule 6 (block -> block1 .)


state 11

    (7) block -> label-declaration . SEMICOLON block1
    (18) label-declaration -> label-declaration . COMMA INTEGER

    SEMICOLON       shift and go to state 48
    COMMA           shift and go to state 49


state 12

    (8) block1 -> block2 .

    DOT             reduce using rule 8 (block1 -> block2 .)
    SEMICOLON       reduce using rule 8 (block1 -> block2 .)


state 13

    (9) block1 -> constant-declaration . SEMICOLON block2
    (20) constant-declaration -> constant-declaration . SEMICOLON ID EQUAL constant

    SEMICOLON       shift and go to state 50


state 14

    (17) label-declaration -> label . INTEGER

    INTEGER         shift and go to state 51


state 15

    (109) label -> INTEGER .
    (27) constant -> INTEGER .

    INTEGER         reduce using rule 109 (label -> INTEGER .)
    ID              reduce using rule 27 (constant -> INTEGER .)


state 16

    (10) block2 -> block3 .

    DOT             reduce using rule 10 (block2 -> block3 .)
    SEMICOLON       reduce using rule 10 (block2 -> block3 .)


state 17

    (11) block2 -> type-declaration . SEMICOLON block3
    (22) type-declaration -> type-declaration . SEMICOLON ID EQUAL type

    SEMICOLON       shift and go to state 52


state 18

    (19) constant-declaration -> CONST . ID EQUAL constant

    ID              shift and go to state 53


state 19

    (37) simple-type -> constant .

    ID              reduce using rule 37 (simple-type -> constant .)
    RBRACKET        reduce using rule 37 (simple-type -> constant .)
    COMMA           reduce using rule 37 (simple-type -> constant .)
    SEMICOLON       reduce using rule 37 (simple-type -> constant .)
    END             reduce using rule 37 (simple-type -> constant .)
    RPAREN          reduce using rule 37 (simple-type -> constant .)


state 20

    (12) block3 -> block4 .

    DOT             reduce using rule 12 (block3 -> block4 .)
    SEMICOLON       reduce using rule 12 (block3 -> block4 .)


state 21

    (13) block3 -> variable-declaration . SEMICOLON block4
    (24) variable-declaration -> variable-declaration . SEMICOLON variableid-list COLON type

    SEMICOLON       shift and go to state 54


state 22

    (21) type-declaration -> type . ID EQUAL type

    ID              shift and go to state 55


state 23

    (14) block4 -> block5 .

    DOT             reduce using rule 14 (block4 -> block5 .)
    SEMICOLON       reduce using rule 14 (block4 -> block5 .)


state 24

    (15) block4 -> proc-and-func-declaration . SEMICOLON block5
    (65) proc-and-func-declaration -> proc-and-func-declaration . SEMICOLON proc-or-func

    SEMICOLON       shift and go to state 56


state 25

    (23) variable-declaration -> VAR . variableid-list COLON type
    (25) variableid-list -> . ID
    (26) variableid-list -> . variableid-list COMMA ID

    ID              shift and go to state 58

    variableid-list                shift and go to state 57

state 26

    (33) type -> simple-type .

    ID              reduce using rule 33 (type -> simple-type .)
    SEMICOLON       reduce using rule 33 (type -> simple-type .)
    END             reduce using rule 33 (type -> simple-type .)
    RPAREN          reduce using rule 33 (type -> simple-type .)


state 27

    (34) type -> structured-type .
